--- a/index.html
+++ b/index.html
@@ -45,9 +45,9 @@
           <div class="hero-wrapper">
             <div data-w-id="990e4c50-539d-1e5d-e5cf-b00f1ee6c2c2" class="hero-col-left" style="transform: translate3d(0px, 0px, 0px) scale3d(1, 1, 1) rotateX(0deg) rotateY(0deg) rotateZ(0deg) skew(0deg); transform-style: preserve-3d; opacity: 1;">
               <div class="title-wrap">
-                <h1 class="hero-title">Sith Norvang, Développeur<br>‍</h1>
+                <h1 class="hero-title">Andy Ramaroson, Développeur<br>‍</h1>
                 <div class="bg-text-wrapper">
-                  <h1 class="hero-title">JavaScript</h1>
+                  <h1 class="hero-title">React|JavaScript| Ruby On Rails</h1>
                   <div class="text-bg-accent"></div>
                 </div>
               </div>
@@ -163,7 +163,7 @@
       </section>
       <footer class="footer wf-section">
         <div class="copyright-block">
-          <div class="copyright-text">© Sith Norvang - 2022</div>
+          <div class="copyright-text">© Andy Ramaroson - 2022</div>
         </div>
       </footer>
     </div>
