--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
               <div class="title-wrap">
                 <h1 class="hero-title">Andy Ramaroson, Développeur<br>‍</h1>
                 <div class="bg-text-wrapper">
-                  <h1 class="hero-title">React|JavaScript| Ruby On Rails</h1>
+                  <h1 class="hero-title">React|JavaScript</h1>
                   <div class="text-bg-accent"></div>
                 </div>
               </div>
