--- a/index.html
+++ b/index.html
@@ -86,6 +86,9 @@
         <div class="section-title-wrapper">
           <div class="section-title-line"></div>
           <h2 class="section-title">Projets</h2>
+           <p data-w-id="4900bec7-b10f-990a-66e8-5b350d34a609"
+        style="opacity: 1; transform: translate3d(0px, 0px, 0px) scale3d(1, 1, 1) rotateX(0deg) rotateY(0deg) rotateZ(0deg) skew(0deg); transform-style: preserve-3d;"
+        class="paragraph left">React | JavaScript | Ruby On Rails </p>
         </div>
       </header>
       <section id="latest-work" data-w-id="ebd761a4-128b-0c6b-e299-c022da03614a" class="section with-title wf-section">
